# TODO_list

./: Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
config/: debug.env  docker.env
nginx/conf.d/: app.conf
tests/: conftest.py  test_domain.py  test_simple.py
todo/: config.py  dependencies.py
todo/Domain/: models.py
todo/api/: endpoints.py  main.py
todo/api/auth/: contracts.py  dependencies.py  endpoints.py
todo/api/common/: contracts.py  dependencies.py  endpoints.py  error_handlers.py  event_handlers.py  middleware.py  settings.py
todo/api/task/: __init__.py  contracts.py  endpoints.py
todo/api/user/: contracts.py  endpoints.py
todo/app/: main.py
todo/core/auth/: models.py  repository.py  services.py  settings.py
todo/core/common/: models.py
todo/core/task/: models.py  repository.py  service.py  services.py
todo/core/user/: models.py  repository.py  services.py
todo/database/: connection.py  models.py
todo/domain/: abstractions.py  models.py
todo/domain/common/: models.py  repository.py
todo/domain/task/: models.py  repository.py
todo/repository/: repo.py
todo/service/celery/: Dockerfile  celery_worker.py  settings.py
todo/service/mongo/: models.py  repositories.py  settings.py  task_repository.py
todo/service/mongo/identity/: models.py  repository.py
todo/service/mongo/task/: models.py  repositories.py
todo/service/mongo/user/: models.py  repositories.py  repository.py
todo/services/: tasks.py
